[project]
name = "demo3"
version = "0.1.0"
description = "Vietnamese Traffic Safety Video QA with InternVL3-8B and OCR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.52.1",
    "av",
    "imageio",
    "decord",
    "opencv-python",
    "bitsandbytes",
    "tqdm",
    "pandas",
    "torchvision",
    "sentencepiece",
    "timm",
    "einops",
    "accelerate",
    "ultralytics",
    "paddleocr",
    "paddlepaddle-gpu==3.2.1",
]

[tool.uv]
environments = ["python_version < '3.12' or sys_platform != 'win32'"]

# Add PyPI as default index
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

# Add PaddlePaddle as additional index
[[tool.uv.index]]
name = "paddlepaddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu126/"
explicit = false