[project]
name = "demo3"
version = "0.1.0"
description = "Vietnamese Traffic Safety Video QA with InternVL3-8B and OCR"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers>=4.52.1",
    "av",
    "imageio",
    "decord",
    "opencv-python",
    "bitsandbytes",
    "tqdm",
    "pandas",
    "torchvision",
    "sentencepiece",
    "timm",
    "einops",
    "accelerate",
    "ultralytics",
    "paddleocr",
    "paddlepaddle>=3.0.0",
]

[tool.uv.pip]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
paddlepaddle-gpu = [{ index = "paddlepaddle" }]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[[tool.uv.index]]
name = "paddlepaddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu126/"
explicit = true